--- a/index.html
+++ b/index.html
@@ -444,6 +444,24 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-modal-text">Subscribe</p>
+          <form>
+            <input
+              id="subscribe"
+              class="footer-modal-input"
+              type="email"
+              name="e-mail"
+              placeholder="E-mail"
+            />
+            <button class="footer-form-btn" type="submit">
+              Subscribe
+              <svg class="footer-form-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -453,6 +471,81 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-box">
+            <label class="modal-label" for="user-name">Name</label>
+            <span class="input-wrapper">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-input-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </span>
+          </div>
+          <div>
+            <label class="modal-label" for="user-tell">Phone</label>
+            <span class="input-wrapper">
+              <input
+                class="modal-input"
+                type="tel"
+                name="user-tell"
+                id="user-tell"
+              />
+              <svg class="modal-input-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </span>
+          </div>
+
+          <div>
+            <label class="modal-label" for="user-email">Email</label>
+            <span class="input-wrapper">
+              <input
+                class="modal-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="modal-input-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </span>
+          </div>
+
+          <div class="modal-box">
+            <label class="modal-label" for="comment">Comment</label>
+            <textarea
+              class="modal-textarea"
+              placeholder="Text input"
+              name="comment"
+              id="comment"
+            ></textarea>
+          </div>
+
+          <div class="modal-check-box">
+            <input
+              class="modal-chek visually-hidden"
+              type="checkbox"
+              name="agreement"
+              id="modal-chekbox"
+            />
+            <label class="modal-check-label" for="modal-chekbox">
+              <span class="modal-input-checkbox">
+                <svg class="modal-check-svg" height="16" width="16">
+                  <use href="./images/icons.svg#icon-agree"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="modal-check-link link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="modal-form-btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
