--- a/index.html
+++ b/index.html
@@ -444,16 +444,18 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
+        <div class="footer-form-box">
           <p class="footer-modal-text">Subscribe</p>
-          <form>
-            <input
-              id="subscribe"
-              class="footer-modal-input"
-              type="email"
-              name="e-mail"
-              placeholder="E-mail"
-            />
+          <form class="footer-form">
+            <label class="footer-form-label">
+              <input
+                id="subscribe"
+                class="footer-modal-input"
+                type="email"
+                name="e-mail"
+                placeholder="E-mail"
+              />
+            </label>
             <button class="footer-form-btn" type="submit">
               Subscribe
               <svg class="footer-form-svg" width="24" height="24">
@@ -475,7 +477,7 @@
         <form class="modal-form">
           <div class="modal-box">
             <label class="modal-label" for="user-name">Name</label>
-            <span class="input-wrapper">
+            <div class="input-wrapper">
               <input
                 class="modal-input"
                 type="text"
@@ -485,11 +487,11 @@
               <svg class="modal-input-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
-            </span>
+            </div>
           </div>
-          <div>
+          <div class="modal-box">
             <label class="modal-label" for="user-tell">Phone</label>
-            <span class="input-wrapper">
+            <div class="input-wrapper">
               <input
                 class="modal-input"
                 type="tel"
@@ -499,12 +501,12 @@
               <svg class="modal-input-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
-            </span>
+            </div>
           </div>
 
-          <div>
+          <div class="modal-box">
             <label class="modal-label" for="user-email">Email</label>
-            <span class="input-wrapper">
+            <div class="input-wrapper">
               <input
                 class="modal-input"
                 type="email"
@@ -514,16 +516,16 @@
               <svg class="modal-input-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
-            </span>
+            </div>
           </div>
 
           <div class="modal-box">
-            <label class="modal-label" for="comment">Comment</label>
+            <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="modal-textarea"
               placeholder="Text input"
               name="comment"
-              id="comment"
+              id="user-comment"
             ></textarea>
           </div>
 
@@ -532,11 +534,12 @@
               class="modal-chek visually-hidden"
               type="checkbox"
               name="agreement"
-              id="modal-chekbox"
+              id="user-privacy"
+              value="true"
             />
-            <label class="modal-check-label" for="modal-chekbox">
+            <label class="modal-check-label" for="user-privacy">
               <span class="modal-input-checkbox">
-                <svg class="modal-check-svg" height="16" width="16">
+                <svg class="modal-check-svg" height="8" width="10">
                   <use href="./images/icons.svg#icon-agree"></use>
                 </svg>
               </span>
