--- a/index.html
+++ b/index.html
@@ -519,12 +519,12 @@
             </div>
           </div>
 
-          <div class="modal-box">
+          <div class="modal-textarea-box">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="modal-textarea"
               placeholder="Text input"
-              name="comment"
+              name="user-comment"
               id="user-comment"
             ></textarea>
           </div>
@@ -533,7 +533,7 @@
             <input
               class="modal-chek visually-hidden"
               type="checkbox"
-              name="agreement"
+              name="user-privacy"
               id="user-privacy"
               value="true"
             />
