add color focus

--- a/index.html
+++ b/index.html
@@ -466,6 +466,9 @@
         </div>
       </div>
     </footer>
+
+    <!-- MODAL -->
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
