--- a/portfolio.html
+++ b/portfolio.html
@@ -342,6 +342,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-box">
+          <p class="footer-modal-text">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-label">
+              <input
+                id="subscribe"
+                class="footer-modal-input"
+                type="email"
+                name="e-mail"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-form-btn" type="submit">
+              Subscribe
+              <svg class="footer-form-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
