--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
               value="true"
             />
             <label class="modal-check-label" for="user-privacy">
-              <span class="modal-input-checkbox">
+              <span class="modal-checkbox-span">
                 <svg class="modal-check-svg" height="8" width="10">
                   <use href="./images/icons.svg#icon-agree"></use>
                 </svg>
