--- a/index.html
+++ b/index.html
@@ -534,14 +534,14 @@
 
           <div class="modal-check-box">
             <input
-              class="modal-chek visually-hidden"
+              class="modal-chek-input visually-hidden"
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
               value="true"
             />
             <label class="modal-check-label" for="user-privacy">
-              <span class="modal-checkbox-span">
+              <span class="modal-check-span">
                 <svg class="modal-check-svg" height="8" width="10">
                   <use href="./images/icons.svg#icon-agree"></use>
                 </svg>
